2005-09-30  Sven Neumann  <sven@gimp.org>

	* app/core/core-enums.[ch]
	* libgimpbase/gimpbaseenums.[ch]: moved GimpGridStyle enum to
	libgimpbase.

	* app/core/gimpimage-grid.h: indentation.

	* app/pdb/Makefile.am
	* libgimp/Makefile.am
	* tools/pdbgen/Makefile.am
	* tools/pdbgen/pdb/grid.pdb: applied slightly modified patch by
	Sylvain FORET that adds a PDB API for the image grid.

	* app/pdb/grid_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimp_pdb.h
	* libgimp/gimpenums.c.tail
	* libgimp/gimpgrid_pdb.[ch]
	* tools/pdbgen/enums.pl
	* tools/pdbgen/groups.pl: (re)generated.

	* libgimp/gimp.def
	* libgimpbase/gimpbase.def: updated.

2005-09-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gbr.c (save_image): handle RGB drawables and
	implicitely add the alpha channel.

2005-09-30  Michael Natterer  <mitch@gimp.org>

	* app/actions/dialogs-actions.c (dialogs_toplevel_actions): use
	GIMP_STOCK_CHAR_PICKER for the keyboard shortcuts dialog. Not
	quite right but at least greppable when we have a proper icon.

2005-09-30  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/dialog.c: removed forgotten foreign registration of
	"gimp-keyboard-shortcuts-dialog".

2005-09-30  Michael Natterer  <mitch@gimp.org>

	* plug-ins/*/*.c: removed '...' from progress messages. They are
	redundant because we are already in a progress. Ported some more
	g_strdup_printf()/gimp_progress_init() to
	gimp_progress_init_printf(). Core will follow...

2005-09-29  Manish Singh  <yosh@gimp.org>

	* plug-ins/uri/uri-backend-wget.c: Finish porting to new progress
	API (and make it build).

	* plug-ins/uri/uri-backend-gnomevfs.c: Convert a g_strdup_printf
	gimp_progress_set_text pair to gimp_progress_set_text_printf.

2005-09-30  Sven Neumann  <sven@gimp.org>

	* app/actions/dialogs-actions.c
	* app/dialogs/dialogs-constructors.[ch]
	* app/dialogs/dialogs.c
	* app/dialogs/keyboard-shortcuts-dialog.[ch]: register the keyboard